2nd version : now analyses all existing sequences in the original sequence, one separately from the other; still fails to understand what to do if portions of these extracted sequence intersect with other sequences : a better version should not analyse sequences in a separate way