@@ -1,9 +1,8 @@
 package org.example.core;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import org.apache.commons.lang3.ArrayUtils;
+
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.stream.IntStream;
@@ -14,97 +13,117 @@ public class SequenceAnalyzer {
             CORRECT_SIGNAL_DISTANCE = 1,
             MISSING_SIGNAL_DISTANCE = 2;
 
-    private final int[] sortedSequence;
+    private final Integer[] originalSortedSequence;
 
-    private Optional<Integer> duplicate,
-            missing;
-
-    private final List<Integer> signal,
-            noise;
+    private final LinkedList<ExtractedSequence> extractedSequences;
 
     private final AtomicInteger positionCounter;
 
     protected SequenceAnalyzer(int... sequenceToAnalyse) {
         super();
-        this.sortedSequence = IntStream.of(sequenceToAnalyse)
+        this.originalSortedSequence = IntStream.of(sequenceToAnalyse)
                 .sorted()
-                .toArray();
-        this.duplicate = Optional.empty();
-        this.missing = Optional.empty();
-        this.noise = new ArrayList<>();
-        this.signal = new ArrayList<>();
+                .boxed()
+                .toArray(Integer[]::new);
+        this.extractedSequences = new LinkedList<>();
         this.positionCounter = new AtomicInteger(); // resetCounter() sets the value to 0
     }
 
     public SequenceAnalysis process() {
+
         this.resetCounter();
+        this.setupNewSequence();
+
         //walk the array
         try {
             walk();
-        } catch (SequenceFinishedException e) {
-            e.processLastValue();
-            //check what is left in the original sequence
-            handleLeftOverSignals();
+        } catch (OriginalSequenceFinishedException e) {
+            try {
+                e.processLastValue();
+            } catch (ExtractedSequenceFinishedException innerEx) {
+                // if the last value is noise again, no actions
+            }
         }
+
+        //compare all extracted sequences
+        final var validSignal = compareSequencesForValidSignal();
+        final var validSequence = validSignal.sequence.toArray(Integer[]::new);
+
+        //deduce noise as all but the validSignal
+        final var noise = ArrayUtils.removeElements(originalSortedSequence, validSequence);
+
         //produce result
         return new SequenceAnalysis(
-                signal.get(0),
-                signal.get(signal.size()-1),
-                missing.orElse(null),
-                duplicate.orElse(null),
+                validSignal.sequence.getFirst(),
+                validSignal.sequence.getLast(),
+                validSignal.missing.orElse(null),
+                validSignal.duplicate.orElse(null),
                 noise
         );
 
-    }
-
-    private void walk() throws SequenceFinishedException {
-        //evaluation on current element
-        //take current position
-        final var currentPos = this.positionCounter.get();
-        //check if next available
-        if (currentPos+1 > sortedSequence.length) { //TODO test by catch on ArrayOutOfBoundsException instead
-            //no values for current pos
-            //TODO should be sequence finished instead
-            throw new IllegalStateException();
-        }
-        //take current value
-        final var currentVal = sortedSequence[currentPos];
-
-        //evaluation on relation of current element to the next
-        //if the next element is the last one
-        if (currentPos+1 == sortedSequence.length) {
-            //last element
-            //action on it depends on how it compares with the last correct signal
-            throw new SequenceFinishedException(currentVal, determineActionForCurrentVal(distanceFromLastSignal(currentVal)));
-        }
-        //conditional branching depending on distance from next value in the sorted sequence
-        determineActionForCurrentVal(distanceToNextValInSequence()).accept(currentVal);
-
-        //recursion
-        //move pos counter to next pos
-        this.positionCounter.incrementAndGet();
-        walk();
     }
 
     private synchronized void resetCounter() {
         this.positionCounter.set(0);
     }
 
-    private int distanceToNextValInSequence() {
-        final int currentPos = this.positionCounter.get();
-        return Math.abs(sortedSequence[currentPos] - sortedSequence[currentPos + 1]);
+    private void walk() throws OriginalSequenceFinishedException {
+        try{
+            //evaluation on current element
+            //take current position
+            final var currentPos = this.positionCounter.getAndIncrement();
+            //take current value
+            final var currentVal = originalSortedSequence[currentPos];
+
+            //evaluation on relation of current element to the next
+            //check if next available
+            if (currentPos+1 >= originalSortedSequence.length) {
+                //last element
+                //action on it depends on how it compares with the last correct signal
+                try{
+                    final var action = determineActionForCurrentVal(distanceFromLastSignal(currentVal));
+                    throw new OriginalSequenceFinishedException(currentVal, action);
+                } catch (SequenceStartedException e) {
+                    //if we fall here, the original sequence was made of a single item
+                    throw new OriginalSequenceFinishedException(currentVal, this::correctSignal);
+                }
+
+            }
+            //conditional branching depending on distance from next value in the sorted sequence
+            determineActionForCurrentVal(distanceToNextValInSequence(currentPos)).accept(currentVal);
+        } catch (ExtractedSequenceFinishedException e) {
+            e.processLastValue();
+            this.setupNewSequence();
+        }
+        //recursion
+        walk();
+    }
+
+    private ExtractedSequence compareSequencesForValidSignal() {
+        return this.extractedSequences.stream()
+                .sorted(ExtractedSequence::compareTo)
+                .findFirst()
+                .orElseThrow(IllegalStateException::new);
+    }
+
+    private void setupNewSequence() {
+        this.extractedSequences.add(new ExtractedSequence());
+    }
+
+    private int distanceToNextValInSequence(final int currentPos) {
+        return Math.abs(originalSortedSequence[currentPos] - originalSortedSequence[currentPos + 1]);
     }
 
     private int distanceFromLastSignal(final int currentVal) throws SequenceStartedException {
         try {
-            return Math.abs(currentVal - signal.get(signal.size() - 1));
-        } catch (IndexOutOfBoundsException e) {
+            return Math.abs(currentVal - this.extractedSequences.getLast().sequence.getLast());
+        } catch (NoSuchElementException e) {
             // still no correct signal available
             throw new SequenceStartedException(currentVal);
         }
     }
 
-    private Consumer<Integer> determineActionForCurrentVal(final int distanceFromSensibleVal) throws SequenceFinishedException {
+    private Consumer<Integer> determineActionForCurrentVal(final int distanceFromSensibleVal) {
         return switch (distanceFromSensibleVal) {
             case DUPLICATE_SIGNAL_DISTANCE -> this::duplicateSignal;
             case CORRECT_SIGNAL_DISTANCE -> this::correctSignal;
@@ -112,36 +131,56 @@ public class SequenceAnalyzer {
             default -> this::potentialNoise;
         };
     }
-    private void potentialNoise(final int currentVal) {
-        try {
-            //verify that it does not fit in the existing sequence
-            if (distanceFromLastSignal(currentVal) == CORRECT_SIGNAL_DISTANCE) this.correctSignal(currentVal);
-            else this.noise.add(currentVal);
-        }  catch (SequenceStartedException e) {
-            //it is noise
-            this.noise.add(currentVal);
-        }
-    }
 
-    private void missingSignal(final int currentVal) throws SequenceFinishedException {
-        if (missing.isEmpty()) missing = Optional.of(currentVal+1);
-        else throw new SequenceFinishedException(currentVal, this::correctSignal);
+    private void missingSignal(final int currentVal) throws ExtractedSequenceFinishedException {
+        final var missingSignal = currentVal + 1;
+        if (this.extractedSequences.getLast().missing.isEmpty()) this.extractedSequences.getLast().missing = Optional.of(missingSignal);
+        else throw new ExtractedSequenceFinishedException(currentVal, this::correctSignal);
     }
 
     private void correctSignal(final int currentVal) {
-        signal.add(currentVal);
+        this.extractedSequences.getLast().sequence.add(currentVal);
     }
 
     private void duplicateSignal(final int currentVal) {
-        if (duplicate.isEmpty()) duplicate = Optional.of(currentVal);
+        if (this.extractedSequences.getLast().duplicate.isEmpty()) this.extractedSequences.getLast().duplicate = Optional.of(currentVal);
         else potentialNoise(currentVal);
     }
 
-    private void handleLeftOverSignals() {
-        //to noise
-        Arrays.stream(Arrays.copyOfRange(sortedSequence, positionCounter.get(), sortedSequence.length))
-                .boxed()
-                .forEach(this.noise::add);
+    private void potentialNoise(final int currentVal) throws ExtractedSequenceFinishedException {
+        try {
+            //verify that it does not fit in the existing sequence
+            if (distanceFromLastSignal(currentVal) == CORRECT_SIGNAL_DISTANCE) this.correctSignal(currentVal);
+            else noiseSignal(currentVal);
+        }  catch (SequenceStartedException e) {
+            //it is noise
+            noiseSignal(currentVal);
+        }
+    }
+
+    private void noiseSignal(final int currentVal) throws ExtractedSequenceFinishedException {
+        //when noise ascertained, move on to next sequence
+        throw new ExtractedSequenceFinishedException(currentVal, val -> {});
+    }
+
+}
+
+class ExtractedSequence implements Comparable<ExtractedSequence> {
+
+    protected Optional<Integer> duplicate,
+            missing;
+
+    protected LinkedList<Integer> sequence;
+
+    protected ExtractedSequence() {
+        this.duplicate = Optional.empty();
+        this.missing = Optional.empty();
+        this.sequence = new LinkedList<>();
+    }
+
+    @Override
+    public int compareTo(ExtractedSequence o) {
+        return this.sequence.size() > o.sequence.size() ? -1 : 1;   //setup in descending order
     }
 
 }
